# llm-rag-iac-learning

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  embeddings.py  ingest.py  main.py  rag_pipeline.py  schemas.py  vector_store.py
backend/tests/: test_health.py  test_rag_query.py
