[project]
name = "llm-rag-iac-learning-backend"
version = "0.1.0"
description = "Learning project backend for LLM + RAG + IaC"
readme = "../README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0.0",
  "python-dotenv",
  "langchain",
  "langchain-community",
  "openai",
  "tiktoken",
  "chromadb",
  "qdrant-client>=1.16.1",
  "numpy>=2.3.5",
]

[dependency-groups]
dev = [
  "pytest",
  "httpx",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
